# dotfiles

./: .gitignore  install.py  pyproject.toml  setup.py
git/: gitconfig  gitconfig.global  gitconfig.local  install.py
helix/: config.toml  install.py  languages.toml
powershell/: install.py
scripts/: common.py
wezterm/: install.py  wezterm.lua
zsh/: install.py  p10k.zsh  zshrc
